--- a/src/lib/css/theme-utility.css
+++ b/src/lib/css/theme-utility.css
@@ -1,22 +1,56 @@
 @import "tailwindcss";
 
+.test {
+  color: #ecf9fe;
+}
+
 @theme static {
-  /*******************************PrimaryWatch***********************************************/
-  --color-base: #ededed;
-  --color-base-50: oklch(from var(--color-base) calc(l - 0.3) c h);
-  --color-base-100: oklch(from var(--color-base) calc(l - 0.2) c h);
-  --color-base-200: oklch(from var(--color-base) calc(l - 0.1) c h);
-  --color-base-300: oklch(from var(--color-base) calc(l - 0.06) c h);
-  --color-base-400: oklch(from var(--color-base) calc(l - 0.03) c h);
-  --color-base-500: oklch(from var(--color-base) l c h);
-  --color-base-600: oklch(from var(--color-base) calc(l + 0.03) c h);
-  --color-base-700: oklch(from var(--color-base) calc(l + 0.06) c h);
-  --color-base-800: oklch(from var(--color-base) calc(l + 0.1) c h);
-  --color-base-900: oklch(from var(--color-base) calc(l + 0.2) c h);
-  --color-base-950: oklch(from var(--color-base) calc(l + 0.3) c h);
+  /*******************************WhiteSwatch***********************************************/
+  --color-white-base: #ededed;
+  --color-white-base-50: oklch(from var(--color-white-base) calc(l - 0.3) c h);
+  --color-white-base-100: oklch(from var(--color-white-base) calc(l - 0.2) c h);
+  --color-white-base-200: oklch(from var(--color-white-base) calc(l - 0.1) c h);
+  --color-white-base-300: oklch(
+    from var(--color-white-base) calc(l - 0.06) c h
+  );
+  --color-white-base-400: oklch(
+    from var(--color-white-base) calc(l - 0.03) c h
+  );
+  --color-white-base-500: oklch(from var(--color-white-base) l c h);
+  --color-white-base-600: oklch(
+    from var(--color-white-base) calc(l + 0.03) c h
+  );
+  --color-white-base-700: oklch(
+    from var(--color-white-base) calc(l + 0.06) c h
+  );
+  --color-white-base-800: oklch(from var(--color-white-base) calc(l + 0.1) c h);
+  --color-white-base-900: oklch(from var(--color-white-base) calc(l + 0.2) c h);
+  --color-white-base-950: oklch(from var(--color-white-base) calc(l + 0.3) c h);
 
+  /*******************************BlackSwatch***********************************************/
+  --color-black-base: #3a3a3a;
+  --color-black-base-50: oklch(from var(--color-black-base) calc(l - 0.3) c h);
+  --color-black-base-100: oklch(from var(--color-black-base) calc(l - 0.2) c h);
+  --color-black-base-200: oklch(from var(--color-black-base) calc(l - 0.1) c h);
+  --color-black-base-300: oklch(
+    from var(--color-black-base) calc(l - 0.06) c h
+  );
+  --color-black-base-400: oklch(
+    from var(--color-black-base) calc(l - 0.03) c h
+  );
+  --color-black-base-500: oklch(from var(--color-black-base) l c h);
+  --color-black-base-600: oklch(
+    from var(--color-black-base) calc(l + 0.03) c h
+  );
+  --color-black-base-700: oklch(
+    from var(--color-black-base) calc(l + 0.06) c h
+  );
+  --color-black-base-800: oklch(from var(--color-black-base) calc(l + 0.1) c h);
+  --color-black-base-900: oklch(from var(--color-black-base) calc(l + 0.2) c h);
+  --color-black-base-950: oklch(from var(--color-black-base) calc(l + 0.3) c h);
+
+  /*******************************PrimarySwatch***********************************************/
   --color-primary: #8f5fef;
-
   --color-primary-50: oklch(from var(--color-primary) calc(l - 0.3) c h);
   --color-primary-100: oklch(from var(--color-primary) calc(l - 0.2) c h);
   --color-primary-200: oklch(from var(--color-primary) calc(l - 0.1) c h);
@@ -30,12 +64,244 @@
   --color-primary-950: oklch(from var(--color-primary) calc(l + 0.3) c h);
 
   --color-on-primary: #f6f1ff;
-
+  /*******************************PrimaryContainerSwatch***********************************************/
   --color-primary-container: #d8ccf0;
-  --color-on-primary-container: #46218e;
+  --color-primary-container-50: oklch(
+    from var(--color-primary-container) calc(l - 0.3) c h
+  );
+  --color-primary-container-100: oklch(
+    from var(--color-primary-container) calc(l - 0.2) c h
+  );
+  --color-primary-container-200: oklch(
+    from var(--color-primary-container) calc(l - 0.1) c h
+  );
+  --color-primary-container-300: oklch(
+    from var(--color-primary-container) calc(l - 0.06) c h
+  );
+  --color-primary-container-400: oklch(
+    from var(--color-primary-container) calc(l - 0.03) c h
+  );
+  --color-primary-container-500: oklch(
+    from var(--color-primary-container) l c h
+  );
+  --color-primary-container-600: oklch(
+    from var(--color-primary-container) calc(l + 0.03) c h
+  );
+  --color-primary-container-700: oklch(
+    from var(--color-primary-container) calc(l + 0.06) c h
+  );
+  --color-primary-container-800: oklch(
+    from var(--color-primary-container) calc(l + 0.1) c h
+  );
+  --color-primary-container-900: oklch(
+    from var(--color-primary-container) calc(l + 0.2) c h
+  );
+  --color-primary-container-950: oklch(
+    from var(--color-primary-container) calc(l + 0.3) c h
+  );
 
+  --color-on-primary-container: #46218e;
+  /*******************************ErrorSwatch***********************************************/
   --color-error: #b03626;
+  --color-error-50: oklch(from var(--color-error) calc(l - 0.3) c h);
+  --color-error-100: oklch(from var(--color-error) calc(l - 0.2) c h);
+  --color-error-200: oklch(from var(--color-error) calc(l - 0.1) c h);
+  --color-error-300: oklch(from var(--color-error) calc(l - 0.06) c h);
+  --color-error-400: oklch(from var(--color-error) calc(l - 0.03) c h);
+  --color-error-500: oklch(from var(--color-error) l c h);
+  --color-error-600: oklch(from var(--color-error) calc(l + 0.03) c h);
+  --color-error-700: oklch(from var(--color-error) calc(l + 0.06) c h);
+  --color-error-800: oklch(from var(--color-error) calc(l + 0.1) c h);
+  --color-error-900: oklch(from var(--color-error) calc(l + 0.2) c h);
+  --color-error-950: oklch(from var(--color-error) calc(l + 0.3) c h);
+
   --color-on-error: #fbece9;
+  /*******************************ErrorContainerSwatch***********************************************/
   --color-error-container: #f0d1cc;
+  --color-error-container-50: oklch(
+    from var(--color-error-container) calc(l - 0.3) c h
+  );
+  --color-error-container-100: oklch(
+    from var(--color-error-container) calc(l - 0.2) c h
+  );
+  --color-error-container-200: oklch(
+    from var(--color-error-container) calc(l - 0.1) c h
+  );
+  --color-error-container-300: oklch(
+    from var(--color-error-container) calc(l - 0.06) c h
+  );
+  --color-error-container-400: oklch(
+    from var(--color-error-container) calc(l - 0.03) c h
+  );
+  --color-error-container-500: oklch(from var(--color-error-container) l c h);
+  --color-error-container-600: oklch(
+    from var(--color-error-container) calc(l + 0.03) c h
+  );
+  --color-error-container-700: oklch(
+    from var(--color-error-container) calc(l + 0.06) c h
+  );
+  --color-error-container-800: oklch(
+    from var(--color-error-container) calc(l + 0.1) c h
+  );
+  --color-error-container-900: oklch(
+    from var(--color-error-container) calc(l + 0.2) c h
+  );
+  --color-error-container-950: oklch(
+    from var(--color-error-container) calc(l + 0.3) c h
+  );
   --color-on-error-container: #6d1a0f;
+
+  /*******************************InfoSwatch***********************************************/
+  --color-info: #65a8d1;
+  --color-info-50: oklch(from var(--color-info) calc(l - 0.3) c h);
+  --color-info-100: oklch(from var(--color-info) calc(l - 0.2) c h);
+  --color-info-200: oklch(from var(--color-info) calc(l - 0.1) c h);
+  --color-info-300: oklch(from var(--color-info) calc(l - 0.06) c h);
+  --color-info-400: oklch(from var(--color-info) calc(l - 0.03) c h);
+  --color-info-500: oklch(from var(--color-info) l c h);
+  --color-info-600: oklch(from var(--color-info) calc(l + 0.03) c h);
+  --color-info-700: oklch(from var(--color-info) calc(l + 0.06) c h);
+  --color-info-800: oklch(from var(--color-info) calc(l + 0.1) c h);
+  --color-info-900: oklch(from var(--color-info) calc(l + 0.2) c h);
+  --color-info-950: oklch(from var(--color-info) calc(l + 0.3) c h);
+  --color-on-info: #ecf9fe;
+
+  /*******************************InfoContainerSwatch***********************************************/
+  --color-info-container: #cce5f3;
+  --color-info-container-50: oklch(
+    from var(--color-info-container) calc(l - 0.3) c h
+  );
+  --color-info-container-100: oklch(
+    from var(--color-info-container) calc(l - 0.2) c h
+  );
+  --color-info-container-200: oklch(
+    from var(--color-info-container) calc(l - 0.1) c h
+  );
+  --color-info-container-300: oklch(
+    from var(--color-info-container) calc(l - 0.06) c h
+  );
+  --color-info-container-400: oklch(
+    from var(--color-info-container) calc(l - 0.03) c h
+  );
+  --color-info-container-500: oklch(from var(--color-info-container) l c h);
+  --color-info-container-600: oklch(
+    from var(--color-info-container) calc(l + 0.03) c h
+  );
+  --color-info-container-700: oklch(
+    from var(--color-info-container) calc(l + 0.06) c h
+  );
+  --color-info-container-800: oklch(
+    from var(--color-info-container) calc(l + 0.1) c h
+  );
+  --color-info-container-900: oklch(
+    from var(--color-info-container) calc(l + 0.2) c h
+  );
+  --color-info-container-950: oklch(
+    from var(--color-info-container) calc(l + 0.3) c h
+  );
+  --color-on-info-container: #2b5d7f;
+
+  /*******************************WarningSwatch***********************************************/
+  --color-warning: #f5a623;
+  --color-warning-50: oklch(from var(--color-warning) calc(l - 0.3) c h);
+  --color-warning-100: oklch(from var(--color-warning) calc(l - 0.2) c h);
+  --color-warning-200: oklch(from var(--color-warning) calc(l - 0.1) c h);
+  --color-warning-300: oklch(from var(--color-warning) calc(l - 0.06) c h);
+  --color-warning-400: oklch(from var(--color-warning) calc(l - 0.03) c h);
+  --color-warning-500: oklch(from var(--color-warning) l c h);
+  --color-warning-600: oklch(from var(--color-warning) calc(l + 0.03) c h);
+  --color-warning-700: oklch(from var(--color-warning) calc(l + 0.06) c h);
+  --color-warning-800: oklch(from var(--color-warning) calc(l + 0.1) c h);
+  --color-warning-900: oklch(from var(--color-warning) calc(l + 0.2) c h);
+  --color-warning-950: oklch(from var(--color-warning) calc(l + 0.3) c h);
+  --color-on-warning: #fff8e1;
+
+  /*******************************WarningContainerSwatch***********************************************/
+  --color-warning-container: #fdebc8;
+  --color-warning-container-50: oklch(
+    from var(--color-warning-container) calc(l - 0.3) c h
+  );
+  --color-warning-container-100: oklch(
+    from var(--color-warning-container) calc(l - 0.2) c h
+  );
+  --color-warning-container-200: oklch(
+    from var(--color-warning-container) calc(l - 0.1) c h
+  );
+  --color-warning-container-300: oklch(
+    from var(--color-warning-container) calc(l - 0.06) c h
+  );
+  --color-warning-container-400: oklch(
+    from var(--color-warning-container) calc(l - 0.03) c h
+  );
+  --color-warning-container-500: oklch(
+    from var(--color-warning-container) l c h
+  );
+  --color-warning-container-600: oklch(
+    from var(--color-warning-container) calc(l + 0.03) c h
+  );
+  --color-warning-container-700: oklch(
+    from var(--color-warning-container) calc(l + 0.06) c h
+  );
+  --color-warning-container-800: oklch(
+    from var(--color-warning-container) calc(l + 0.1) c h
+  );
+  --color-warning-container-900: oklch(
+    from var(--color-warning-container) calc(l + 0.2) c h
+  );
+  --color-warning-container-950: oklch(
+    from var(--color-warning-container) calc(l + 0.3) c h
+  );
+  --color-on-warning-container: #5e3c0a;
+
+  /*******************************SuccessSwatch***********************************************/
+  --color-success: #4caf50;
+  --color-success-50: oklch(from var(--color-success) calc(l - 0.3) c h);
+  --color-success-100: oklch(from var(--color-success) calc(l - 0.2) c h);
+  --color-success-200: oklch(from var(--color-success) calc(l - 0.1) c h);
+  --color-success-300: oklch(from var(--color-success) calc(l - 0.06) c h);
+  --color-success-400: oklch(from var(--color-success) calc(l - 0.03) c h);
+  --color-success-500: oklch(from var(--color-success) l c h);
+  --color-success-600: oklch(from var(--color-success) calc(l + 0.03) c h);
+  --color-success-700: oklch(from var(--color-success) calc(l + 0.06) c h);
+  --color-success-800: oklch(from var(--color-success) calc(l + 0.1) c h);
+  --color-success-900: oklch(from var(--color-success) calc(l + 0.2) c h);
+  --color-success-950: oklch(from var(--color-success) calc(l + 0.3) c h);
+  --color-on-success: #e8f5e9;
+
+  /*******************************SuccessContainerSwatch***********************************************/
+  --color-success-container: #c8e6c9;
+  --color-success-container-50: oklch(
+    from var(--color-success-container) calc(l - 0.3) c h
+  );
+  --color-success-container-100: oklch(
+    from var(--color-success-container) calc(l - 0.2) c h
+  );
+  --color-success-container-200: oklch(
+    from var(--color-success-container) calc(l - 0.1) c h
+  );
+  --color-success-container-300: oklch(
+    from var(--color-success-container) calc(l - 0.06) c h
+  );
+  --color-success-container-400: oklch(
+    from var(--color-success-container) calc(l - 0.03) c h
+  );
+  --color-success-container-500: oklch(
+    from var(--color-success-container) l c h
+  );
+  --color-success-container-600: oklch(
+    from var(--color-success-container) calc(l + 0.03) c h
+  );
+  --color-success-container-700: oklch(
+    from var(--color-success-container) calc(l + 0.06) c h
+  );
+  --color-success-container-800: oklch(
+    from var(--color-success-container) calc(l + 0.1) c h
+  );
+  --color-success-container-900: oklch(
+    from var(--color-success-container) calc(l + 0.2) c h
+  );
+  --color-success-container-950: oklch(
+    from var(--color-success-container) calc(l + 0.3) c h
+  );
+  --color-on-success-container: #2e7d32;
 }
